[gd_scene load_steps=3 format=3 uid="uid://bwtfpytnos2gi"]

[ext_resource type="Theme" uid="uid://f6wj7nhetgtb" path="res://addons/horadric/ui/dashboard_theme.tres" id="1_scyoq"]
[ext_resource type="Script" path="res://addons/horadric/ui/dashboard.gd" id="2_rju8j"]

[node name="Dashboard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme = ExtResource("1_scyoq")
script = ExtResource("2_rju8j")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 40)
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0

[node name="ColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
color = Color(0, 0, 0, 0.117647)

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/Header"]
layout_mode = 2
text = "Header"

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/Header"]
layout_mode = 2
text = "Save"

[node name="ReloadButton" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/Header"]
layout_mode = 2
text = "Reload"

[node name="Test" type="Button" parent="MarginContainer/VBoxContainer/MarginContainer/Header"]
layout_mode = 2
text = "Test Resource Preview"

[node name="Inspector" type="SplitContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Sidebar" type="Control" parent="MarginContainer/VBoxContainer/Inspector"]
custom_minimum_size = Vector2(300, 2.08165e-12)
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer/Inspector/Sidebar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.117647)

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/Inspector/Sidebar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Inspector/Sidebar/CenterContainer"]
layout_mode = 2
text = "Sidebar"

[node name="Main" type="Control" parent="MarginContainer/VBoxContainer/Inspector"]
custom_minimum_size = Vector2(300, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer/Inspector/Main"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.117647)

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/Inspector/Main"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Inspector/Main/CenterContainer"]
layout_mode = 2
text = "The almighty Horadric plugin!"

[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/Header/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/Header/ReloadButton" to="." method="_on_reload_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MarginContainer/Header/Test" to="." method="_on_test_pressed"]
